chore: fixed email styling on mobile

--- a/assets/css/_email.scss
+++ b/assets/css/_email.scss
@@ -5,6 +5,10 @@ body.email {
   .container {
     padding-left: 0px;
     padding-right: 0px;
+    .row {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
   img {
     max-width: 100%;
